# VA-51

./: DOCUMENTATION.md  README.md  detect_projector_resolution.py  launch_game.sh  test_projector.py
control_turtlebot/: DOCUMENTATION.md  README.md  config.py  integrated_ui.py  keyboard_controller.py  main.py  ps3_controller.py  requirements.txt  visual_robot.py  websocket_client.py
control_turtlebot/config/: __init__.py  controls.yaml  network.yaml  robot.yaml  ui.yaml
control_turtlebot/core/: __init__.py
control_turtlebot/core/controllers/: __init__.py  base_controller.py  keyboard_controller.py  ps3_controller.py
control_turtlebot/core/networking/: __init__.py
control_turtlebot/ui/: __init__.py  theme.py
control_turtlebot/utils/: __init__.py  config_loader.py
scripts/: connect_turtlebot.sh
tank_project/: QUICKSTART.md  README.md  __main__.py  main.py  requirements.txt
tank_project/config/: arena.yaml  camera.yaml  game.yaml  ia.yaml  robot.yaml
tank_project/core/: __init__.py
tank_project/core/control/: kinematics.py  motion_constraints.py  ros_bridge_client.py  trajectory_follower.py
tank_project/core/game/: game_engine.py  (+5 more)
tank_project/scripts/: export_debug_data.py  install_deps.sh  run_calibration.py  run_game.py
tank_project/visualization/: colors.py  debug_draw.py  projector_overlay.py  pygame_renderer.py  ui_hud.py
turtlebot_game/: DOCUMENTATION.md  README.md  package.xml  setup.cfg  setup.py
turtlebot_game/config/: safety_config.py
turtlebot_game/launch/: safety_bridge.launch.py
turtlebot_game/turtlebot_game/: safety_bridge.py
(+32 files in other folders)
