<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_game</name>
  <version>0.1.0</version>
  <description>Projet VA50 UTBM - TurtleBot controllers and Safety Bridge WebSocket</description>

  <maintainer email="projetva50@utbm.edu">Projet VA50 Promo 2025 Automne</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>